--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hmcts/ccd-case-ui-toolkit",
-  "version": "7.3.23-marked-upgrade",
+  "version": "7.3.25",
   "engines": {
     "node": ">=20.19.0"
   },
