--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -13,10 +13,6 @@ on:
     tags:
       - '*'
 
-permissions:
-  contents: read
-  pull-requests: read
-
 jobs:
   build:
     if: github.event_name != 'push' || !startsWith(github.ref, 'refs/tags')
@@ -69,19 +65,7 @@ jobs:
         with:
           name: code-coverage-report
           path: coverage
-      - name: Analyze with SonarCloud (PR)
-        if: github.event_name == 'pull_request'
-        uses: SonarSource/sonarqube-scan-action@v4.2.1
-        with:
-          args: >-
-            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}
-            -Dsonar.pullrequest.branch=${{ github.head_ref }}
-            -Dsonar.pullrequest.base=${{ github.base_ref }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Analyze with SonarCloud (Push)
-        if: github.event_name == 'push'
+      - name: Analyze with SonarCloud
         uses: SonarSource/sonarqube-scan-action@v4.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
