--- a/package.json
+++ b/package.json
@@ -48,18 +48,18 @@
   "dependencies": {
     "@angular-material-components/datetime-picker": "16.0.1",
     "@angular-material-components/moment-adapter": "16.0.1",
-    "@angular/animations": "^20.3.15",
+    "@angular/animations": "^20.3.16",
     "@angular/cdk": "17.3.5",
-    "@angular/common": "^20.3.15",
-    "@angular/compiler": "^20.3.15",
-    "@angular/core": "^20.3.15",
-    "@angular/forms": "^20.3.15",
-    "@angular/localize": "^20.3.15",
+    "@angular/common": "^20.3.16",
+    "@angular/compiler": "^20.3.16",
+    "@angular/core": "^20.3.16",
+    "@angular/forms": "^20.3.16",
+    "@angular/localize": "^20.3.16",
     "@angular/material": "^16.2.0",
-    "@angular/platform-browser": "^20.3.15",
-    "@angular/platform-browser-dynamic": "^20.3.15",
-    "@angular/router": "^20.3.15",
-    "@angular/upgrade": "^20.2.4",
+    "@angular/platform-browser": "^20.3.16",
+    "@angular/platform-browser-dynamic": "^20.3.16",
+    "@angular/router": "^20.3.16",
+    "@angular/upgrade": "^20.3.16",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccpay-web-component": "6.5.17",
     "@hmcts/frontend": "0.0.50-alpha",
@@ -83,9 +83,9 @@
     "ngx-pagination": "6.0.3",
     "pegjs": "^0.10.0",
     "prism": "^4.1.2",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "rpx-xui-translation": "1.2.0",
-    "rx-polling-hmcts": "1.1.1",
+    "rx-polling-hmcts": "^1.1.1",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.6.7",
     "underscore": "^1.9.1",
@@ -94,16 +94,16 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.3",
+    "@angular-devkit/build-angular": "^20.3.16",
     "@angular-eslint/builder": "^20",
     "@angular-eslint/eslint-plugin": "^20",
     "@angular-eslint/eslint-plugin-template": "^20",
     "@angular-eslint/schematics": "^20",
     "@angular-eslint/template-parser": "^20",
-    "@angular/cli": "^20.3.9",
-    "@angular/compiler-cli": "^20.3.15",
+    "@angular/cli": "^20.3.16",
+    "@angular/compiler-cli": "^20.3.16",
     "@babel/core": "^7.23.0",
-    "@compodoc/compodoc": "1.1.12",
+    "@compodoc/compodoc": "^1.1.31",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -198,7 +198,8 @@
     "handlebars": "^4.7.7",
     "https-proxy-agent": "^2.2.3",
     "ip": "^1.1.5",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
+    "lodash-es": "^4.17.23",
     "marked": "^0.7.0",
     "minimatch": "^8.0.4",
     "minimist": "^1.2.3",
@@ -213,7 +214,7 @@
     "url-parse": "^1.5.0",
     "xmlhttprequest-ssl": "1.6.3",
     "y18n": "^4.0.1",
-    "prismjs": "1.24.1",
+    "prismjs": "^1.30.0",
     "websocket-extensions": "0.1.4",
     "ini": "^2.0.0",
     "browserslist": "^4.21.0",
